@@ -1,3 +1,9 @@
+TAG: qcreports_db-4-4-1-1
+DATE: 12/28/2010
+STAFF: lec
+CHANGES:
+1) TR10501/MRK_NomenNotInformative.sql
+
 TAG: qcreports_db-4-4-0-22
 DATE: 11/24/2010
 STAFF: lec
